Overflowing fixes
Fixed several overflow issues with the editor and console.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,7 +120,8 @@ body {
   height: 100%;
   width: 100%;
   max-height: 100vh;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 .content-item {
   width: 100%;
@@ -130,8 +131,9 @@ body {
 #editor {
   background-color: hsl(var(--background-color-dark));
   max-height: 66.66vh;
-  max-width: 66.66vw;
+  max-width: 57.25vw;
   overflow: auto;
+  margin-right: 5rem;
 }
 #console {
   display: flex;
@@ -139,6 +141,7 @@ body {
   position: relative;
   background-color: black;
   overflow: hidden;
+  overflow-x: auto;
 
   #console-titlebar {
     display: grid;
@@ -165,6 +168,7 @@ body {
     overflow-y: auto;
     padding: 0.5rem;
     width: 100%;
+    max-width: 55vw;
   }
 }
 .console-result {
@@ -219,6 +223,9 @@ body {
 }
 span.emph {
   color: hsl(var(--primary));
+}
+span.white {
+  color: white;
 }
 span.note {
   display: block;
